--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="%PUBLIC_URL%/airbnb_icon.ico?v=2" />
     <meta charset="utf-8" />
     <title>Simple React App</title>
     <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
