User dropdown fix

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" href="%PUBLIC_URL%/airbnb_icon.ico?v=2" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <meta charset="utf-8" />
     <title>Simple React App</title>
     <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
