--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="%PUBLIC_URL%/airbnb_icon.ico?v=2" />
+    <link rel="icon" href="airbnb_icon.ico?v=2" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <meta charset="utf-8" />
-    <title>Airbnb</title>
+    <title>A-cool-page</title>
     <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
   </head>
   <body>
